<resources>
    <string name="app_name">یdoctorPage</string>
    <string name="name_text">Helen.B</string>
    <string name="city_text">New York , NY</string>
    <string name="online_btn_text">Online \n visit</string>
    <string name="home_btn_text">Home consulation</string>
    <string name="book_btn_text">Book an appointment</string>
    <string name="favorite_btn_text">Favorite</string>
    <string name="enter">enter</string>
    <string name="doctor_name_text">helen</string>
    <string name="doctor1">doctor1</string>
    <string name="doctor3">doctor3</string>
    <string name="doctor2">doctor2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number_text">9312564855</string>
</resources>