<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_doctor1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="30dp"
        app:cornerRadius="10dp"
        android:minHeight="60dp"
        android:text="@string/doctor1"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_doctor2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_doctor1"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        app:cornerRadius="10dp"
        android:minHeight="60dp"
        android:text="@string/doctor2"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_doctor3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_doctor2"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        app:cornerRadius="10dp"
        android:minHeight="60dp"
        android:text="@string/doctor3"/>




</androidx.constraintlayout.widget.ConstraintLayout>