<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DoctorInfoFragment">

    <ImageView
        android:id="@+id/profile_Image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/doctor_circle"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:text="@string/name_text"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/profile_Image"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableStartCompat="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/b_nazanin_font"/>

    <TextView
        android:id="@+id/address_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/city_text"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/profile_Image"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/b_nazanin_font"/>
    <TextView
        android:id="@+id/phone_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/phone_number_text"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/profile_Image"
        app:layout_constraintTop_toBottomOf="@id/address_txv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:drawableStartCompat="@drawable/ic_baseline_phone_24"
        android:drawablePadding="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="3dp"
        android:fontFamily="@font/b_nazanin_font"/>

</androidx.constraintlayout.widget.ConstraintLayout>